# crackme

./: README  meson.build
scripts/: iwyu-wrapper.sh  meson.build
src/: meson.build
src/0x00/: meson.build  string.c
src/0x01/: integer.c  meson.build
src/0x02/: argument.c  meson.build
src/0x03/: environment.c  meson.build
src/0x04/: meson.build  simple_license.c
src/0x05/: meson.build  wannacry.c
src/0x06/: meson.build  rng.c
src/0x07/: bug.c  meson.build
